--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -14,12 +14,12 @@
           <a routerLink="/"><span class="nav-link  ms-0 text-primary">Home</span></a>
         </li>
         <li class="nav-item d-flex align-items-center "
-          [ngClass]="getSingleUser.userRoll === 'Artist'?'d-none':'d-block'">
+          [ngClass]="getUser.userRoll === 'Studio Owner'?'d-none':'d-block'">
           <img src="./../../../../assets/images/Studio.svg" alt="studio-icon" />
           <a routerLink="studio/studio-list"><span class="nav-link fw-light ">Studio</span></a>
         </li>
         <li class="nav-item d-flex align-items-center "
-          [ngClass]="getSingleUser.userRoll === 'Studio Owner'?'d-none':'d-block'">
+          [ngClass]="getUser.userRoll === 'Artist'?'d-none':'d-block'">
           <img src="./../../../../assets/images/noun-artist-1191144 1.svg" alt="Artist-icon" />
           <a routerLink="artist/artist-list"><span class="nav-link fw-light">Artist</span></a>
         </li>
@@ -31,11 +31,11 @@
     </div>
     <!-- Profile Image -->
     <div class=" d-flex align-items-center">
-      <h4 class="text-dark fs-7 cursor-pointer d-none d-md-block  me-4">{{getSingleUser.firstName}}</h4>
+      <h4 class="text-dark fs-7 cursor-pointer d-none d-md-block  me-4">{{getUser.firstName}}</h4>
       <div class="profile-image overflow-hidden d-none d-md-block me-3 cursor-pointer">
         <img src="./../../../../assets/images/Profile.png" alt="profile-image" class="w-100 h-auto"
-          (click)="OpenProfileMenu()" *ngIf="!getSingleUser" />
-        <img [src]="getSingleUser.profilePicture" alt="profile-image" class="w-100 h-100" (click)="OpenProfileMenu()" />
+          (click)="OpenProfileMenu()" *ngIf="!getUser" />
+        <img [src]="getUser.profilePicture" alt="profile-image" class="w-100 h-100" (click)="OpenProfileMenu()" />
 
       </div>
     </div>
@@ -48,7 +48,7 @@
   <!-- End Header -->
 
   <!-- mobile -->
-  <div class="text-white border ">
+  <div class="text-white border d-block d-md-none ">
     <input type="checkbox" id="menuOpen" class="d-none" />
     <aside class="sidebar bg-white w-100">
       <!-- Profile Image -->
@@ -56,13 +56,13 @@
         <div class="d-flex align-items-center">
           <div class="profile-image overflow-hidden cursor-pointer ms-3 me-3">
             <img src="./../../../../assets/images/Profile.png" alt="profile-image" class="w-100 h-100"
-              (click)="opendown()" *ngIf="!getSingleUser" />
-            <img [src]="getSingleUser.profilePicture" alt="profile-image" class="w-100 h-100" (click)="opendown()" />
+              (click)="upDowArrow()" *ngIf="!getUser" />
+            <img [src]="getUser.profilePicture" alt="profile-image" class="w-100 h-100" (click)="upDowArrow()" />
 
           </div>
-          <h4 class="text-dark fs-7 cursor-pointer" (click)="opendown()">{{getSingleUser.firstName}}</h4>
+          <h4 class="text-dark fs-7 cursor-pointer" (click)="upDowArrow()">{{getUser.firstName}}</h4>
         </div>
-        <span class="icon-chevron-down text-black  pe-4" (click)="opendown()"></span>
+        <span class="icon-chevron-down text-black  pe-4" (click)="upDowArrow()"></span>
       </div>
       <!-- End Profile Image -->
 
@@ -70,7 +70,7 @@
       <div class="text-black mt-3" [ngClass]="isDown ?'d-block':'d-none'">
         <ul class="nav  d-flex flex-column">
           <li class="nav-item d-flex align-items-center cursor-pointer"
-            [ngClass]="getSingleUser.userRoll === 'General User'?'d-none':'d-block'">
+            [ngClass]="getUser.userRoll === 'General User'?'d-none':'d-block'">
             <span class="icon-search fs-2 ms-4"></span>
             <div class="d-flex align-items-center">
               <a href="" class="nav-link">Available</a>
@@ -85,12 +85,12 @@
             <a class="nav-link" routerLink="/manage-profile">Manage Profile</a>
           </li>
           <li class="nav-item d-flex align-items-center cursor-pointer"
-            [ngClass]="getSingleUser.userRoll === 'General User'|| getSingleUser.userRoll === 'Artist' ?'d-none':'d-block'">
+            [ngClass]="getUser.userRoll === 'General User'|| getUser.userRoll === 'Artist' ?'d-none':'d-block'">
             <span class="icon-manage-studio fs-4 ms-4"></span>
             <a class="nav-link" routerLink="studio/manage-studio">Manage Studio Profile</a>
           </li>
           <li class="nav-item d-flex align-items-center cursor-pointer"
-            [ngClass]="getSingleUser.userRoll === 'General User'|| getSingleUser.userRoll === 'Studio Owner'?'d-none':'d-block'">
+            [ngClass]="getUser.userRoll === 'General User'|| getUser.userRoll === 'Studio Owner'?'d-none':'d-block'">
             <span class="icon-manage-studio fs-4 ms-4"></span>
             <a class="nav-link" routerLink="artist/manage-artist">Manage Artist Profile</a>
           </li>
@@ -110,12 +110,12 @@
             <a routerLink="/"><span class="nav-link fw-light text-primary ms-1 ">Home</span></a>
           </li>
           <li class="nav-item d-flex align-items-center cursor-pointer"
-            [ngClass]="getSingleUser.userRoll === 'Artist'?'d-none':'d-block'">
+            [ngClass]="getUser.userRoll === 'Studio Owner'?'d-none':'d-block'">
             <span class=" icon-Studio text-black ms-4"></span>
             <a routerLink="studio/studio-list"><span class="nav-link ">Studio</span></a>
           </li>
           <li class="nav-item d-flex align-items-center cursor-pointer"
-            [ngClass]="getSingleUser.userRoll === 'Studio Owner'?'d-none':'d-block'">
+            [ngClass]="getUser.userRoll === 'Artist'?'d-none':'d-block'">
             <span class=" icon-Artist text-black ms-4"></span>
             <a routerLink="artist/artist-list"><span class="nav-link">Artist</span></a>
           </li>
