--- a/src/app/core/component/profile-menu/profile-menu.component.html
+++ b/src/app/core/component/profile-menu/profile-menu.component.html
@@ -1,9 +1,9 @@
 <!-- profile Menu -->
-<div class="profile-menu-wrapper bg-white position-absolute rounded ">
+<div class="profile-menu-wrapper bg-white position-absolute rounded  d-none d-md-block">
     <div class="profile-menu my-2 mx-2 cursor-pointer">
         <ul class="nav">
             <li class="nav-item d-flex align-items-center w-100 p-1"
-                [ngClass]=" getSingleUser.userRoll === 'General User'?'d-none':'d-block'">
+                [ngClass]=" getUser.userRoll === 'General User'?'d-none':'d-block'">
                 <span class="icon-search fs-4"></span>
                 <div class="d-flex align-items-center">
                     <a href="" class="nav-link">Available</a>
@@ -18,12 +18,12 @@
                 <a class="nav-link" routerLink="/manage-profile">Manage Profile</a>
             </li>
             <li class="nav-item d-flex align-items-center  w-100 p-1"
-                [ngClass]="getSingleUser.userRoll === 'Artist' || getSingleUser.userRoll === 'General User'?'d-none':'d-block'">
+                [ngClass]="getUser.userRoll === 'Artist' || getUser.userRoll === 'General User'?'d-none':'d-block'">
                 <span class="icon-manage-studio fs-4"></span>
                 <a class="nav-link" routerLink="studio/manage-studio">Manage Studio Profile</a>
             </li>
             <li class="nav-item d-flex align-items-center  w-100 p-1"
-                [ngClass]="getSingleUser.userRoll === 'Studio Owner' || getSingleUser.userRoll === 'General User'?'d-none':'d-block'">
+                [ngClass]="getUser.userRoll === 'Studio Owner' || getUser.userRoll === 'General User'?'d-none':'d-block'">
                 <span class="icon-manage-studio fs-4"></span>
                 <a class="nav-link" routerLink="artist/manage-artist">Manage Artist Profile</a>
             </li>
