--- a/src/app/manage-profile-container/manage-profile-presentation/manage-profile-presentation.component.html
+++ b/src/app/manage-profile-container/manage-profile-presentation/manage-profile-presentation.component.html
@@ -36,7 +36,7 @@
                                 </div>
                             </div>
                             <!-- End  FirstName -->
-                            <!-- Lastname -->
+                            <!-- LastName -->
                             <div class="col-12 col-sm-6">
                                 <div class="form-group mt-3">
                                     <label for="LastName" class="fw-bold">Last Name <span class="text-danger">
