--- a/src/assets/scss/componet/_loader.scss
+++ b/src/assets/scss/componet/_loader.scss
@@ -1,61 +1,103 @@
-
-.loaderMask{
+.loaderMask {
+    position: absolute;
     height: 100%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 500;
-
+    width: 100%;
+    z-index: 1;
+    background-color: rgba(100, 100, 100, 0.3);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.loader {
-    width: 80px;
-    height: 80px;
-    font-size: 12px;
-    box-sizing: border-box;
-    border-top: 0.3em solid hotpink;
-    border-radius: 50%;
+
+.planet {
+    display: block;
+    width: 100px;
+    height: 100px;
     position: relative;
-    animation: rotating 2s ease-in-out infinite;
-    --direction: 1;
-}
-
-.loader::before,
-.loader::after {
-    content: '';
-    position: absolute;
-    width: inherit;
-    height: inherit;
+    transform-style: preserve-3d;
     border-radius: 50%;
-    box-sizing: border-box;
-    top: -0.2em;
+    background: #fcc96b;
+    background: rgb(252, 201, 107);
+    background: linear-gradient(180deg,
+            rgba(252, 201, 107, 1) 0%,
+            rgba(252, 201, 107, 1) 15%,
+            rgba(247, 174, 1, 1) 15%,
+            rgba(247, 174, 1, 1) 19%,
+            rgba(252, 201, 107, 1) 19%,
+            rgba(252, 201, 107, 1) 22%,
+            rgba(247, 174, 1, 1) 22%,
+            rgba(247, 174, 1, 1) 28%,
+            rgba(252, 201, 107, 1) 28%,
+            rgba(252, 201, 107, 1) 31%,
+            rgba(252, 201, 107, 1) 33%,
+            rgba(252, 201, 107, 1) 36%,
+            rgba(247, 174, 1, 1) 36%,
+            rgba(247, 174, 1, 1) 48%,
+            rgba(252, 201, 107, 1) 48%,
+            rgba(252, 201, 107, 1) 55%,
+            rgba(247, 174, 1, 1) 55%,
+            rgba(247, 174, 1, 1) 66%,
+            rgba(252, 201, 107, 1) 66%,
+            rgba(252, 201, 107, 1) 70%,
+            rgba(247, 174, 1, 1) 70%,
+            rgba(247, 174, 1, 1) 73%,
+            rgba(252, 201, 107, 1) 73%,
+            rgba(252, 201, 107, 1) 82%,
+            rgba(247, 174, 1, 1) 82%,
+            rgba(247, 174, 1, 1) 86%,
+            rgba(252, 201, 107, 1) 86%);
+    box-shadow: inset 0 0 25px rgba(0, 0, 0, 0.25),
+        inset 8px -4px 6px rgba(199, 128, 0, 0.5),
+        inset -8px 4px 8px rgba(255, 235, 199, 0.5),
+        inset 20px -5px 12px #f7ae01,
+        0 0 100px rgba(255, 255, 255, 0.35);
+    transform: rotateZ(-15deg);
 }
 
-.loader::before {
-    border-top: 0.3em solid dodgerblue;
-    transform: rotate(120deg);
-}
-
-.loader::after {
-    border-top: 0.3em solid gold;
-    transform: rotate(240deg);
-}
-
-.loader span {
+.planet::before {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation: rotating 2s linear infinite;
-    --direction: -1;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: 16px solid #7b6f42;
+    border-top-width: 0;
+    border-radius: 50%;
+    box-shadow: 0 -2px 0 #b1a693;
+    animation: rings1 0.8s infinite linear;
 }
 
-@keyframes rotating {
-    50% {
-        transform: rotate(calc(180deg * var(--direction)));
+.planet::after {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    border: 8px solid #b1a693;
+    border-top-width: 0;
+    border-radius: 50%;
+    box-shadow: 0 -2px 0 #7b6f42;
+    animation: rings2 0.8s infinite linear;
+}
+
+@keyframes rings1 {
+    0% {
+        transform: rotateX(65deg) rotateZ(0deg) scale(1.75);
     }
 
     100% {
-        transform: rotate(calc(360deg * var(--direction)));
+        transform: rotateX(65deg) rotateZ(360deg) scale(1.75);
+    }
+}
+
+@keyframes rings2 {
+    0% {
+        transform: rotateX(65deg) rotateZ(0deg) scale(1.7);
+    }
+
+    100% {
+        transform: rotateX(65deg) rotateZ(360deg) scale(1.7);
     }
 }
